<resources>
    <string name="app_name">AnyGrocery</string>
    <string name="tab_label_1">Shopping List</string>
    <string name="tab_label_2">Archived Shopping List</string>
    <string name="add">Add</string>
    <string name="list_icon">List Icon</string>
    <string name="groceries_done">Groceries Done</string>
    <string name="groceries_done_x_of_y">0/0</string>
    <string name="list_name">List Name</string>
    <string name="product_amount">X10</string>
    <string name="product_icon">product_icon</string>
    <string name="product_name">Product</string>
    <string name="X">X</string>
    <string name="archive_button">Archive Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>